# Medieval-Ontology

./: .gitignore  Makefile  README.md  ebulo.graphml  ebulo.html  graph-insights.json  main.py  pyproject.toml
docs/: index.html
src/ebulo_relations/: cli.py  extractor.py  graph.py  sources.py
src/medieval_ontology/: __init__.py  analysis.py  builder.py  cli.py  extractor.py  gazetteer.py  graph.py  sources.py  text.py
tests/: test_ebulo_relations.py
