[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ebulo-relations"
version = "0.1.0"
description = "Extract relationship network graphs from Petrus de Ebulo's Liber ad honorem Augusti."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Medieval Graph Project" }]
keywords = ["medieval", "latin", "network", "graph", "nlp", "petrus-de-ebulo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "ipykernel>=7.2.0",
  "networkx>=3.2",
  "pyvis>=0.3.2",
  "requests>=2.32.3",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
ebulo-relations = "ebulo_relations.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ebulo_relations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
